# hearo_speech_manager

./: CMakeLists.txt  package.xml  setup.cfg  setup.py
hearo_speech_manager/config/: speech_config.py  speech_utility.py
hearo_speech_manager/module/: AudioBoundaryDetector.py  Base_STT_Handler.py  Base_TTS_Handler.py  ContextAwareSegmenter.py  HeaRo_TTS_Handler.py  OpenAI_TTS_Handler.py  SpectralAudioAssembler.py  Whisper_STT_Handler.py  Zonos_TTS_Handler.py  audio_cache_manager.py  lazy_gpu_session_pool.py
hearo_speech_manager/nodes/: HeaRo_TTS_Handler_Node.py  google_stt.py  stt_node.py  vad.py
launch/: hearo_speech_manager.launch.py
srv/: GetOrCreateAudioId.srv  TTSGenerate.srv
test/: audio_input_test_node.py  vad_stt_test_node.py
